# multiagent-codebase-feedback-assistant

./: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
agents/dependency_checker/: __init__.py  dependency_checker_agent.py  dependency_checker_server.py
agents/documentation_generator/: __init__.py  documentation_generator_agent.py  documentation_generator_server.py
agents/helpers/: __init__.py  create_a2a_server.py  test_agent.py
agents/naming_quality_analyzer/: __init__.py  naming_quality_analyzer_agent.py  naming_quality_analyzer_server.py
agents/orchestrator/: __init__.py  orchestrator_agent.py  orchestrator_server.py
agents/project_scanner/: project_scanner_agent.py  project_scanner_server.py
agents/project_scanner_agent/: __init__.py  project_scanner_agent.py  project_scanner_server.py
agents/srp_violation_detector/: __init__.py  srp_violation_detector_agent.py  srp_violation_detector_server.py
cli/: __init__.py  api_client.py  docker_manager.py  formatters.py  main.py
common/: logger.py  prompt_manager.py  prompts.py  schemas.py  settings.py
scripts/: migrate_prompts_to_langfuse.py
tools/: dependency_checker_tool.py  documentation_analyzer_tool.py  filesystem_tool.py  naming_analyzer_tool.py  srp_analyzer_tool.py
typings/google/: __init__.pyi
typings/google/adk/: __init__.pyi
typings/google/adk/agents/: __init__.pyi  base_agent.pyi  llm_agent.pyi
typings/google/adk/memory/: __init__.pyi  in_memory_memory_service.pyi
typings/google/adk/runners/: __init__.pyi
typings/google/adk/sessions/: __init__.pyi
