[project]
name = "multiagent-codebase-feedback-assistant"
version = "0.1.0"
description = "AI-based multi-agent system for analyzing Python codebases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[a2a]>=1.17.0",
    "fastapi>=0.119.0",
    "uvicorn>=0.31.0",
    "litellm>=1.78.5",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
